@@ -1,41 +1,40 @@
 package com.apae.gestao.service;
 
-import com.apae.gestao.dto.AlunoTurmaRequestDTO;
+import com.apae.gestao.dto.AlunoResponseDTO;
+import com.apae.gestao.dto.AlunoTurmaRequestDTO; 
 import com.apae.gestao.dto.AvaliacaoHistoricoResponseDTO;
-import com.apae.gestao.dto.aluno.AlunoDetalhesDTO;
-import com.apae.gestao.dto.aluno.AlunoResumoDTO;
 import com.apae.gestao.entity.Aluno;
 import com.apae.gestao.entity.Turma;
-import com.apae.gestao.entity.TurmaAluno;
+import com.apae.gestao.entity.TurmaAluno; 
 import com.apae.gestao.repository.AlunoRepository;
 import com.apae.gestao.repository.AvaliacaoRepository;
-import com.apae.gestao.repository.TurmaAlunoRepository;
-import com.apae.gestao.repository.TurmaRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
+import com.apae.gestao.repository.TurmaRepository; 
+import com.apae.gestao.repository.TurmaAlunoRepository; 
+
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AlunoService {
 
     private final AlunoRepository alunoRepository;
-    private final TurmaRepository turmaRepository;
-    private final TurmaAlunoRepository turmaAlunoRepository;
-    private final AvaliacaoRepository avaliacaoRepository;
+    private final AvaliacaoRepository avaliacaoRepository; 
+    private final TurmaRepository turmaRepository; 
+    private final TurmaAlunoRepository turmaAlunoRepository; 
 
     public AlunoService(
-            AlunoRepository alunoRepository,
-            TurmaRepository turmaRepository,
-            TurmaAlunoRepository turmaAlunoRepository,
-            AvaliacaoRepository avaliacaoRepository
+        AlunoRepository alunoRepository, 
+        AvaliacaoRepository avaliacaoRepository,
+        TurmaRepository turmaRepository,
+        TurmaAlunoRepository turmaAlunoRepository 
     ) {
         this.alunoRepository = alunoRepository;
+        this.avaliacaoRepository = avaliacaoRepository;
         this.turmaRepository = turmaRepository;
         this.turmaAlunoRepository = turmaAlunoRepository;
-        this.avaliacaoRepository = avaliacaoRepository;
     }
 
     @Transactional(readOnly = true)
@@ -45,45 +44,57 @@ public class AlunoService {
                         ? alunoRepository.listarAlunosResumido(pageable)
                         : alunoRepository.listarAlunosPorNomeResumido(nome, pageable);
 
-        return page.map(dto -> new AlunoResumoDTO(
-                dto.getId(),
-                dto.getNome(),
-                dto.getNomeResponsavel(),
-                dto.getNomeTurma(),
-                dto.getTurnoTurma(),
-                dto.getPercentualPresenca(),
-                dto.getDataUltimaAvaliacao() 
-        ));
+    @Transactional(readOnly = true)
+    public List<AlunoResponseDTO> listarTodos() {
+        return alunoRepository.findAll()
+                .stream()
+                .map(AlunoResponseDTO::new)
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public AlunoDetalhesDTO buscarPorId(Long id) {
+    public AlunoResponseDTO buscarPorId(Long id) {
         Aluno aluno = alunoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Aluno não encontrado"));
-        return new AlunoDetalhesDTO(aluno);
+                .orElseThrow(() -> new RuntimeException("Aluno não encontrado com ID: " + id));
+        return new AlunoResponseDTO(aluno);
     }
-
+    
     @Transactional
     public AlunoDetalhesDTO atualizarTurma(Long alunoId, AlunoTurmaRequestDTO dto) {
         Aluno aluno = alunoRepository.findById(alunoId)
-                .orElseThrow(() -> new RuntimeException("Aluno não encontrado"));
-
+            .orElseThrow(() -> new RuntimeException("Aluno não encontrado com ID: " + alunoId));
+        
         Turma novaTurma = turmaRepository.findById(dto.getNovaTurmaId())
-                .orElseThrow(() -> new RuntimeException("Turma não encontrada"));
+            .orElseThrow(() -> new RuntimeException("Turma não encontrada com ID: " + dto.getNovaTurmaId()));
 
-        turmaAlunoRepository
-                .findAllByAlunoAndIsAlunoAtivoTrue(aluno)
-                .forEach(ta -> ta.setIsAlunoAtivo(false));
+        // BUSCA UMA LISTA EM VEZ DE UM ÚNICO OBJETO PARA EVITAR O ERRO
+        List<TurmaAluno> registrosAtivos = turmaAlunoRepository.findAllByAlunoAndIsAlunoAtivoTrue(aluno);
+        
+        // Desativa todos os que encontrar (limpeza preventiva)
+        for (TurmaAluno registro : registrosAtivos) {
+            registro.setIsAlunoAtivo(false);
+            turmaAlunoRepository.save(registro);
+        }
 
-        TurmaAluno novoVinculo = new TurmaAluno();
-        novoVinculo.setAluno(aluno);
-        novoVinculo.setTurma(novaTurma);
-        novoVinculo.setIsAlunoAtivo(true);
+        // Cria o novo registro
+        TurmaAluno novoRegistro = new TurmaAluno();
+        novoRegistro.setAluno(aluno);
+        novoRegistro.setTurma(novaTurma);
+        novoRegistro.setIsAlunoAtivo(true); 
+        
+        turmaAlunoRepository.save(novoRegistro);
+        
+        aluno.getTurmaAlunos().add(novoRegistro);
 
-        turmaAlunoRepository.save(novoVinculo);
-        aluno.getTurmaAlunos().add(novoVinculo);
+        return new AlunoResponseDTO(aluno); 
+    }
 
-        return new AlunoDetalhesDTO(aluno);
+    @Transactional
+    public void deletar(Long id) {
+        if (!alunoRepository.existsById(id)) {
+            throw new RuntimeException("Aluno não encontrado com ID: " + id);
+        }
+        alunoRepository.deleteById(id);
     }
 
     @Transactional(readOnly = true)
@@ -98,7 +109,7 @@ public class AlunoService {
         return avaliacaoRepository
                 .findByAlunoOrderByDataAvaliacaoDesc(aluno)
                 .stream()
-                .map(a -> AvaliacaoHistoricoResponseDTO.fromEntity(a, turmaAtual))
-                .toList();
+                .map(avaliacao -> AvaliacaoHistoricoResponseDTO.fromEntity(avaliacao, turmaAtualCompleta))
+                .collect(Collectors.toList());
     }
 }
